Add link to most recent workshop slides

--- a/index.html
+++ b/index.html
@@ -303,7 +303,6 @@ $(document).ready(function () {
 </div>
 
 
-<p><em>more coming in the subsections below</em></p>
 <div id="background-basics" class="section level3">
 <h3>Background basics</h3>
 <ul>
@@ -313,6 +312,16 @@ $(document).ready(function () {
 </div>
 <div id="core-purrr-lessons" class="section level3">
 <h3>Core purrr lessons</h3>
+<ul>
+<li><a href="ls00_inspect-explore.html">Explore the example lists: Wes Anderson, Game of Thrones, GitHub</a> <em>how to get to know a list</em></li>
+<li><a href="ls01_map-name-position-shortcuts.html">Introduction to <code>map()</code>: extract elements</a> <em>name and position shortcuts, type-specific and simplifying map</em></li>
+<li><a href="ls02_map-extraction-advanced.html">Simplifying data from a list of GitHub users</a> <em>end to end: inspection, extraction and simplification, more advanced</em></li>
+<li><a href="ls03_map-function-syntax.html">Specifying the function in map() + parallel mapping</a> <em>all the purrr shortcuts and mapping over multiple lists</em></li>
+<li><a href="ls08_trump-tweets.html">Trump Android words</a> <em>suitable for live-coding</em></li>
+<li><a href="ls12_different-sized-samples.html">Sample from groups, n varies by group</a><br />
+</li>
+<li><a href="ls13_list-columns.html">List columns</a> <em>creating, managing, and eliminating list-columns</em></li>
+</ul>
 </div>
 <div id="worked-examples" class="section level3">
 <h3>Worked examples</h3>
@@ -328,6 +337,9 @@ $(document).ready(function () {
 </div>
 <div id="patterns-and-anti-patterns" class="section level3">
 <h3>Patterns and anti-patterns</h3>
+<ul>
+<li><a href="pt00_gotchas.html">Gotchas</a></li>
+</ul>
 </div>
 
 <p><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="by-nc.png" height="400" width="65"/></a></p>
