--- a/talks.html
+++ b/talks.html
@@ -304,6 +304,14 @@ $(document).ready(function () {
 
 
 <p>Talks related to purrr.</p>
+<div id="hands-on-workshop" class="section level3">
+<h3>Hands-on workshop</h3>
+<p>I’ve given 2 - 4 hour hands-on workshops on purrr, e.g., at Latin-R in Buenos Aires, September 2018. I use these slides to complement the live coding.</p>
+<script async class="speakerdeck-embed" data-id="be53cc331a0b4246b343802a4eca037b" data-ratio="1.33333333333333" src="//speakerdeck.com/assets/embed.js"></script>
+<div style="margin-bottom:5px">
+<strong> <a href="https://speakerdeck.com/jennybc/purrr-workshop" title="How to repeat yourself with purrr" target="_blank">How to repeat yourself with purrr</a> </strong> from <strong><a href="https://speakerdeck.com/jennybc" target="_blank">Jennifer Bryan</a></strong>
+</div>
+</div>
 <div id="rstudioconf-2017" class="section level3">
 <h3>rstudio::conf 2017</h3>
 <script async class="speakerdeck-embed" data-id="8d8ba68c2ba14d42954fa2c96cf8bd5d" data-ratio="1.33333333333333" src="//speakerdeck.com/assets/embed.js"></script>
