--- a/ls00_inspect-explore.html
+++ b/ls00_inspect-explore.html
@@ -421,7 +421,7 @@ library(repurrrsive)</code></pre>
 <li>Note the length, names, and types of the constituent objects.</li>
 </ul>
 <blockquote>
-<p>I have no idea what’s in this list or what it’s structure is! Please send help.</p>
+<p>I have no idea what’s in this list or what its structure is! Please send help.</p>
 </blockquote>
 <p>Understand this is <strong>situation normal</strong>, especially when your list comes from querying a poorly documented API. This is often true even when your list has been created completely within R. How many of us perfectly understand the structure of a fitted linear model object? You just have to embark on a voyage of discovery and figure out what’s in there. Happy trails.</p>
 <div id="indexing-review" class="section level3">
