--- a/ls00_inspect-explore.html
+++ b/ls00_inspect-explore.html
@@ -426,7 +426,7 @@ library(repurrrsive)</code></pre>
 <p>Understand this is <strong>situation normal</strong>, especially when your list comes from querying a poorly documented API. This is often true even when your list has been created completely within R. How many of us perfectly understand the structure of a fitted linear model object? You just have to embark on a voyage of discovery and figure out what’s in there. Happy trails.</p>
 <div id="indexing-review" class="section level3">
 <h3>Indexing, review</h3>
-<p>Rembmer, there are 3 ways to pull elements out of a list:</p>
+<p>Remember, there are 3 ways to pull elements out of a list:</p>
 <ul>
 <li><p>The <code>$</code> operator. Extracts a single element by name. Name can be unquoted, if syntactic.</p>
 <pre class="r"><code>x &lt;- list(a = &quot;a&quot;, b = 2)
