--- a/more-resources.html
+++ b/more-resources.html
@@ -311,7 +311,7 @@ $(document).ready(function () {
 </ul></li>
 <li>Example lists are in the repurrrsive package:
 <ul>
-<li><a href="https://github.com/jennybc/repurrrsive#readme">https://github.com/jennybc/repurrrsive</a></li>
+<li><a href="https://cran.r-project.org/package=repurrrsive" class="uri">https://cran.r-project.org/package=repurrrsive</a></li>
 </ul></li>
 <li>Depicting R data structures and operations via lego:
 <ul>
