Fix the license

--- a/bk01_base-functions.html
+++ b/bk01_base-functions.html
@@ -881,7 +881,7 @@ head(coefs)
 <p>This illustrates the post-processing that is often necessary in a base workflow. We need to restore the country info from the names of <code>by_obj</code>, use them to look up the continents in gapminder, and then restore the original factor levels for both country and continent. It illustrates the payoff for temporarily tolerating the <code>data</code> and <code>fit</code> list-columns in the nested data frame used in the tidyverse workflow. The country and continent factors remain intact and directly associated with the data and fits.</p>
 </div>
 
-<p><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="by-nc.png" height="400" width="65"/></a></p>
+<i class="fab fa-creative-commons fa-2x"></i><i class="fab fa-creative-commons-by fa-2x"></i><i class="fab fa-creative-commons-sa fa-2x"></i>
 
 
 </div>
