--- a/ls12_different-sized-samples.html
+++ b/ls12_different-sized-samples.html
@@ -471,7 +471,7 @@ do.call(rbind, sampled_iris)            # :( do.call()
 #&gt; virginica.125          6.7         3.3          5.7         2.1  virginica</code></pre>
 <p>IMO the base R solution requires much greater facility with R programming and data structures to get it right. It feels more like programming than data analysis.</p>
 
-<p><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="by-nc.png" height="400" width="65"/></a></p>
+<i class="fab fa-creative-commons fa-2x"></i><i class="fab fa-creative-commons-by fa-2x"></i><i class="fab fa-creative-commons-sa fa-2x"></i>
 
 
 
