--- a/about.html
+++ b/about.html
@@ -353,7 +353,7 @@ $(document).ready(function () {
 ## [1] /Users/jenny/Library/R/3.6/library
 ## [2] /Library/Frameworks/R.framework/Versions/3.6/Resources/library</code></pre>
 
-<p><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="by-nc.png" height="400" width="65"/></a></p>
+<i class="fab fa-creative-commons fa-2x"></i><i class="fab fa-creative-commons-by fa-2x"></i><i class="fab fa-creative-commons-sa fa-2x"></i>
 
 
 
