--- a/bk00_vectors-and-lists.html
+++ b/bk00_vectors-and-lists.html
@@ -631,7 +631,7 @@ for(i in seq_along(my_list)) {
 <p>A major objective of this tutorial is to show you how to avoid writing these explicit <code>for()</code> loops yourself.</p>
 </div>
 
-<p><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="by-nc.png" height="400" width="65"/></a></p>
+<i class="fab fa-creative-commons fa-2x"></i><i class="fab fa-creative-commons-by fa-2x"></i><i class="fab fa-creative-commons-sa fa-2x"></i>
 
 
 </div>
