--- a/ex20_bulk-gmail.html
+++ b/ex20_bulk-gmail.html
@@ -373,7 +373,7 @@ errors &lt;- sent_mail %&gt;%
   map_lgl(Negate(is.null))
 sent_mail[errors]</code></pre>
 
-<p><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="by-nc.png" height="400" width="65"/></a></p>
+<i class="fab fa-creative-commons fa-2x"></i><i class="fab fa-creative-commons-by fa-2x"></i><i class="fab fa-creative-commons-sa fa-2x"></i>
 
 
 
