--- a/ex22_github-issues-pull-requests.html
+++ b/ex22_github-issues-pull-requests.html
@@ -331,7 +331,7 @@ $(document).ready(function () {
 </ul>
 <p>Several clean scripts are there, as well as expository README.</p>
 
-<p><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="by-nc.png" height="400" width="65"/></a></p>
+<i class="fab fa-creative-commons fa-2x"></i><i class="fab fa-creative-commons-by fa-2x"></i><i class="fab fa-creative-commons-sa fa-2x"></i>
 
 
 
