--- a/ex24_xml-wrangling.html
+++ b/ex24_xml-wrangling.html
@@ -317,7 +317,7 @@ $(document).ready(function () {
 <li><code>unnest()</code> to go from one row per Sheet row to one row per Sheet cell</li>
 </ul>
 
-<p><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="by-nc.png" height="400" width="65"/></a></p>
+<i class="fab fa-creative-commons fa-2x"></i><i class="fab fa-creative-commons-by fa-2x"></i><i class="fab fa-creative-commons-sa fa-2x"></i>
 
 
 
