--- a/ls00_inspect-explore.html
+++ b/ls00_inspect-explore.html
@@ -543,7 +543,7 @@ str(got_chars[[1]], list.len = 8)
 </div>
 </div>
 
-<p><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="by-nc.png" height="400" width="65"/></a></p>
+<i class="fab fa-creative-commons fa-2x"></i><i class="fab fa-creative-commons-by fa-2x"></i><i class="fab fa-creative-commons-sa fa-2x"></i>
 
 
 </div>
