--- a/ls02_map-extraction-advanced.html
+++ b/ls02_map-extraction-advanced.html
@@ -818,7 +818,7 @@ map_df(one_user, `[`, c(&quot;name&quot;, &quot;fork&quot;, &quot;open_issues&qu
 <p>If you just wanted to solve this problem, you could let <a href="https://github.com/jeroenooms/jsonlite"><code>jsonlite</code></a> simplify the JSON for you. Other packages for list handling include <a href="https://bitbucket.org/graumannlabtools/listless"><code>listless</code></a>, <a href="https://renkun.me/rlist/"><code>rlist</code></a>.</p>
 </div>
 
-<p><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="by-nc.png" height="400" width="65"/></a></p>
+<i class="fab fa-creative-commons fa-2x"></i><i class="fab fa-creative-commons-by fa-2x"></i><i class="fab fa-creative-commons-sa fa-2x"></i>
 
 
 </div>
