--- a/ls08_trump-tweets.html
+++ b/ls08_trump-tweets.html
@@ -931,7 +931,7 @@ pmap(mdf, substring)
 #&gt; &lt;environment: namespace:base&gt;</code></pre>
 </div>
 
-<p><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="by-nc.png" height="400" width="65"/></a></p>
+<i class="fab fa-creative-commons fa-2x"></i><i class="fab fa-creative-commons-by fa-2x"></i><i class="fab fa-creative-commons-sa fa-2x"></i>
 
 
 
