--- a/pt00_gotchas.html
+++ b/pt00_gotchas.html
@@ -406,7 +406,7 @@ x_list %&gt;%
 #&gt; [1]  8 10  2  4  6</code></pre>
 </div>
 
-<p><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="by-nc.png" height="400" width="65"/></a></p>
+<i class="fab fa-creative-commons fa-2x"></i><i class="fab fa-creative-commons-by fa-2x"></i><i class="fab fa-creative-commons-sa fa-2x"></i>
 
 
 
